# ai-youtube-script-generator

./: .code-workspace  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  railway.toml
backend/: Dockerfile  config.py  converters.py  main.py  models.py  pyproject.toml  streaming.py
backend/graphs/: __init__.py  dev.py  general.py  llm.py  passthrough.py  registry.py  research.py  state.py
backend/graphs/script_writer/: __init__.py  graph.py  prompt_editor.py  prompt_store.py  prompts.py  state.py  text_utils.py  tools.py
backend/tests/: conftest.py  test_converters.py  test_endpoints.py  test_models.py  test_registry.py  test_script_writer_prompts.py  test_script_writer_workflow.py  test_streaming.py
backend/tools/: __init__.py  code_executor.py  web_search.py
docs/: context.md  custom-agent-integration-guide.md  openwebui-setup.md  railway-deploy.md  youtube-script-integration.md
openwebui/: Dockerfile  generate_script_writer_config.py  patch_tool_call_input.py  railway.toml  script_writer_custom.js  start-codex.sh
scripts/: deploy_railway_existing_prod.sh
